# meta_standards_converter

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements.txt
docs/: MINiML.xsd  codebase.md  index.md
scripts/: json2h5ad-compose.sh  provision-rootless-json2h5ad.sh
src/meta_standards_converter/ae_handlers/: ae_constructor.py  ae_idf_handlers.py  ae_model.py  ae_parser.py  ae_roundtrip.py  ae_sdrf_handlers.py  ae_webfetcher.py
src/meta_standards_converter/cli/: __init__.py  ae2json.py  common.py  geo2ae.py  geo2json.py  json2ae.py  json2h5ad.py
src/meta_standards_converter/converters/: ae2json.py  geo2ae.py  geo2json.py  json2ae.py  json2h5ad.py
src/meta_standards_converter/enrichers/: __init__.py  miniml_enricher.py
src/meta_standards_converter/geo_handlers/: geo_parser.py  geo_webfetcher.py
src/meta_standards_converter/harmonizers/: geo2ols.py  harmonizers.py  pubmed2ols.py
src/meta_standards_converter/helpers/: json_helper.py  request_helper.py
src/meta_standards_converter/insdc_handlers/: insdc_webfetcher.py
src/meta_standards_converter/meta_store/: __init__.py  meta_store.py
src/meta_standards_converter/pubmed_handlers/: __init__.py  pubmed_webfetcher.py
tests/: GSE328265_family.xml  __init__.py  test_ae2json.py  test_ae_constructor.py  test_ae_sdrf_handlers.py  test_ae_webfetcher.py  test_cli_ae2json.py  test_cli_geo2ae.py  test_cli_geo2json.py  test_cli_json2ae.py  test_cli_json2h5ad.py  test_docker_artifacts.py  test_docs_index.py  test_geo2ae.py  test_geo2json.py  test_geo_parser.py  test_geo_webfetcher.py  test_h5ad_pipeline.py  test_insdc_webfetcher.py  test_json2ae.py  test_json2h5ad.py  test_miniml_enricher.py  test_project_scripts.py  test_pubmed_webfetcher.py  test_request_helper.py
